[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/debug_menu.gd" type="Script" id=1]

[node name="DebugMenu" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 256, 150 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport"]
margin_right = 183.0
margin_bottom = 56.0

[node name="FovProperty" type="HBoxContainer" parent="Viewport/VBoxContainer"]
margin_right = 183.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Viewport/VBoxContainer/FovProperty"]
margin_top = 1.0
margin_right = 26.0
margin_bottom = 15.0
text = "FOV"

[node name="HSlider" type="HSlider" parent="Viewport/VBoxContainer/FovProperty"]
margin_left = 30.0
margin_right = 130.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 40.0
max_value = 120.0
value = 60.0
ticks_on_borders = true

[node name="DistanceProperty" type="HBoxContainer" parent="Viewport/VBoxContainer"]
margin_top = 20.0
margin_right = 183.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Viewport/VBoxContainer/DistanceProperty"]
margin_top = 1.0
margin_right = 56.0
margin_bottom = 15.0
text = "Distance"

[node name="HSlider" type="HSlider" parent="Viewport/VBoxContainer/DistanceProperty"]
margin_left = 60.0
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 10000.0
value = 2000.0
ticks_on_borders = true
